2019-1/220/users/4266/executions/1736_2506.log
== TEST (2019-05-16 11:13:29) 
-- CODE:
total=1
while(total>0) and (total<12000):
	qi = int(input("Digite a quantidade inicial de tambaquis: "))
	pc = float(input("Digite o percentual de crescimento anual: "))
	ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
	a = 0
	b = 1
	total = qi*(pc/100) - ret




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qvenda = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:17) 
-- CODE:
total=1
n=1
while(total>0) and (total<12000):
	qi = int(input("Digite a quantidade inicial de tambaquis: "))
	pc = float(input("Digite o percentual de crescimento anual: "))
	ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
	a = 0
	b = 1
	total = qi*(pc/100) - ret
	n = n+1
	if(total==0):
		print("EXTINCAO")
	elif(total==12000):
		print("LIMITE")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qvenda = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:31) 
-- CODE:
total=1
n=1
while(total>0) and (total<12000):
	qi = int(input("Digite a quantidade inicial de tambaquis: "))
	pc = float(input("Digite o percentual de crescimento anual: "))
	ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
	a = 0
	b = 1
	total =qi + qi*(pc/100) - ret
	n = n+1
	if(total==0):
		print("EXTINCAO")
	elif(total==12000):
		print("LIMITE")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qi = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:16) 
-- CODE:
total=1
n=1
while(total>0) and (total<12000):
	qi = int(input("Digite a quantidade inicial de tambaquis: "))
	pc = float(input("Digite o percentual de crescimento anual: "))
	ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
	a = 0
	b = 1
	total =qi + qi*(pc/100) - ret
	n = n+1
if(total==0):
		print("EXTINCAO")
elif(total==12000):
		print("LIMITE")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qi = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:20:00) 
-- CODE:
total=1
n=1

	qi = int(input("Digite a quantidade inicial de tambaquis: "))
	pc = float(input("Digite o percentual de crescimento anual: "))
	ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
	a = 0
	b = 1
while(total>0) and (total<12000):
	total =qi + qi*(pc/100) - ret
	n = n+1
if(total==0):
		print("EXTINCAO")
elif(total==12000):
		print("LIMITE")



-- ERROR:
File "XXXX", line 4
    qi = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:20:21) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total =qi + qi*(pc/100) - ret
	n = n+1
if(total==0):
		print("EXTINCAO")
elif(total==12000):
		print("LIMITE")



-- ERROR:
File "XXXX", line 4
    qi = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:20:43) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total =qi + qi*(pc/100) - ret
	n = n+1
if(total==0):
	print("EXTINCAO")
elif(total==12000):
	print("LIMITE")



-- ERROR:
File "XXXX", line 4
    qi = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:20:53) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total =qi + qi*(pc/100) - ret
	n = n+1
if(total==0):
	print("EXTINCAO")
elif(total==12000):
	print("LIMITE")



-- ERROR:
File "XXXX", line 4
    qi = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:39) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total =qi + qi*(pc/100) - ret
	n = n+1
if(total==0):
	print("EXTINCAO")
	print(n)
elif(total==12000):
	print("LIMITE")
	print(t)


-- ERROR:
File "XXXX", line 4
    qi = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:17) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total =qi + qi*(pc/100) - ret
	n = n+1
	print(total)
if(total==0):
	print("EXTINCAO")
	print(n)
elif(total==12000):
	print("LIMITE")
	print(t)


-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:19) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total = qi + (qi*pc/100) - ret
	n = n+1
	print(total)
if(total==0):
	print("EXTINCAO")
	print(n)
elif(total==12000):
	print("LIMITE")
	print(t)


-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:31) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total = qi + (qi*pc/100) - ret
	n = n+1
print(total)
if(total==0):
	print("EXTINCAO")
	print(n)
elif(total==12000):
	print("LIMITE")
	print(t)


-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:52) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total = qi + (qi*pc/100) - ret
	n = n+1
print(total)
if(total==0):
	print("EXTINCAO")
	print(n)
elif(total==12000):
	print("LIMITE")
	print(t)


-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:38:48) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total = qi + (qi*pc/100) - ret
	n = n+1

if(total==0):
	print("EXTINCAO")
	print(n)
elif(total==12000):
	print("LIMITE")
	print(t)


-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:39:16) 
-- CODE:
total=1
n=1
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))
a = 0
b = 1
while(total>0) and (total<12000):
	total = qi + (qi*pc/100) - ret
	n = n+1
	if(total==0):
		print("EXTINCAO")
		print(n)
	elif(total==12000):
		print("LIMITE")
		print(t)


-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:54) 
-- CODE:

qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
total=1
while(total>0) and (total>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1
	if(total<=0):
		print("EXTINCAO")
		print(c)
	elif(total>12000):
		print("LIMITE")
		print(n)
	
-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:35) 
-- CODE:

qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
total=1
while(total>0) and (total>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1
if(total<=0):
	print("EXTINCAO")
	print(c)
elif(total>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:27) 
-- CODE:

qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
total=1
while(total>0) and (total>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1

if(total<=0):
	print("EXTINCAO")
	print(c)
elif(total>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:49) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
total=1
while(total>0) and (total>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1

if(total<=0):
	print("EXTINCAO")
	print(c)
elif(total>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
1173.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:23:43) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
total=1
while(total>0) and (total>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1
print(c)
if(total<=0):
	print("EXTINCAO")
	print(c)
elif(total>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:29:25) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = float(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1

while(qi>0) and (qi>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1
if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:53) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
while(qi>0) and (qi>12000):
	total = qi + qi*(pc/100) - ret
	c = c + 1
if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:34) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
while(qi>0) and (qi>12000):
	qi = qi + qi*(pc/100) - ret
	c = c + 1
if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:50) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
while(qi>0) and (qi>12000):
	qi = qi + qi*(pc/100) - ret
	c = c + 1

if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:24) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
while(qi>0) and (qi<=12000):
	qi = qi + qi*(pc/100) - ret
	c = c + 1

if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(n)
	
-- OUTPUT:
EXTINCAO
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:39) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=1
while(qi>0) and (qi<=12000):
	qi = qi + qi*(pc/100) - ret
	c = c + 1

if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(c)
	
-- OUTPUT:
EXTINCAO
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:56) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=0
while(qi>0) and (qi<=12000):
	qi = qi + qi*(pc/100) - ret
	c = c + 1

if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(c)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:33:09) 
-- CODE:
qi = int(input("Digite a quantidade inicial de tambaquis: "))
pc = int(input("Digite o percentual de crescimento anual: "))
ret = int(input("Digite a quantidade de tambaquis retirados por ano: "))

c=0
while(qi>0) and (qi<=12000):
	qi = qi + qi*(pc/100) - ret
	c = c + 1

if(qi<=0):
	print("EXTINCAO")
	print(c)
elif(qi>12000):
	print("LIMITE")
	print(c)
	
-- EXECUTION TIME:
0.295503
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
